--- a/src/package.json
+++ b/src/package.json
@@ -15,5 +15,8 @@
     "method-override": "^2.3.5",
     "mongoose": "^4.4.15",
     "resourcejs": "^1.2.0"
+  },
+  "devDependencies": {
+    "dotenv": "^2.0.0"
   }
 }
