MainController created in controllers folder. uses node-restful for CRUD creation. CRUD test works with POSTMAN

--- a/src/package.json
+++ b/src/package.json
@@ -17,6 +17,7 @@
     "resourcejs": "^1.2.0"
   },
   "devDependencies": {
-    "dotenv": "^2.0.0"
+    "dotenv": "^2.0.0",
+    "node-restful": "^0.2.5"
   }
 }
